--- a/styles/globals.css
+++ b/styles/globals.css
@@ -390,4 +390,27 @@ td {
 .tbl_main_class{
   border-color: #dee2e6;
 }
+.form-control:focus {
+  box-shadow: none;
+}
 
+.form-control-underlined {
+  border-width: 0;
+  border-bottom-width: 1px;
+  border-radius: 0;
+  padding-left: 0;
+}
+
+
+.form-control::placeholder {
+  font-size: 0.95rem;
+  color: #aaa;
+  font-style: italic;
+}
+
+.font-italic {
+  font-style: italic!important;
+}
+.font-weight-light {
+  font-weight: 300!important;
+} 
